# up-subscription-rust_fork

./: .env.oft-current  .env.oft-latest  .gitignore  .gitmodules  Cargo.toml  README.md  deny.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
tools/: coverage.sh  fmt_clippy_doc.sh  generate_test_coverage_report.sh  oft_report.sh  startup.sh
up-subscription/: Cargo.toml
up-subscription-cli/: Cargo.toml
up-subscription-cli/src/: main.rs
up-subscription-cli/src/transport/: local.rs  mod.rs  mqtt5.rs  socket.rs  zenoh.rs
up-subscription/src/: configuration.rs  lib.rs  listeners.rs  notification_manager.rs  persistency.rs  subscription_manager.rs  usubscription.rs  usubscription_notification.rs  usubscription_uris.rs
up-subscription/src/common/: helpers.rs
up-subscription/src/handlers/: fetch_subscribers.rs  fetch_subscriptions.rs  register_for_notifications.rs  reset.rs  subscribe.rs  unregister_for_notifications.rs  unsubscribe.rs
up-subscription/src/listeners/: fetch_subscribers.rs  fetch_subscriptions.rs  register_for_notifications.rs  subscribe.rs  unregister_for_notifications.rs  unsubscribe.rs
up-subscription/src/tests/: mod.rs  notification_manager_tests.rs  persistency_tests.rs  subscription_manager_tests.rs  test_lib.rs  test_objects.rs  test_transports.rs  usubscription_tests.rs
