################################################################################
# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
################################################################################

[package]
name = "up-subscription-cli"
description = "Rust implementation of the Eclipse uProtocol uSubscription specification, cli frontend"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.wix]
upgrade-guid = "3E48EB10-ACFD-4B07-A264-B390EE2653DD"
path-guid = "C290A21B-FDDD-46D3-B390-249F0AFDC75C"
license = false
eula = false

[features]
default = []
mqtt5 = ["dep:up-transport-mqtt5"]
zenoh = ["dep:up-transport-zenoh", "dep:serde_json"]

[dependencies]
clap = { version = "4.5.53", default-features = false, features = [
    "std",
    "derive",
    "env",
    "color",
    "help",
    "usage",
    "error-context",
    "suggestions",
] }
serde_json = { version = "1.0", optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
up-rust = { workspace = true, features = ["usubscription", "util" ] }
up-subscription = { workspace = true }
up-transport-mqtt5 = { version = "0.4.0", optional = true }
up-transport-zenoh = { version = "0.9.0", optional = true }
