################################################################################
# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
################################################################################

[package]
name = "up-subscription"
description = "Rust implementation of the Eclipse uProtocol uSubscription specification"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
pickledb = { version = "0.5.1" }
protobuf = { workspace = true }
serde = { version = "1.0" }
tokio = { workspace = true }
tracing = { workspace = true }
up-rust = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
test-case = { workspace = true }
test-log ={ version = "0.2", default-features = false, features = ["trace"] }
up-rust = { workspace = true, features = ["test-util"] }

[package.metadata.dist]
all-features = true
